--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+certifi==2020.12.5
+influxdb-client==1.14.0
 paho-mqtt==1.5.1
 persist-queue==0.5.1
+python-dateutil==2.8.1
+pytz==2020.5
 PyYAML==5.4.1
+Rx==3.1.1
+six==1.15.0
+urllib3==1.26.3
