replaced with new configuration sample

--- a/app/config.yaml.sample
+++ b/app/config.yaml.sample
@@ -7,8 +7,6 @@ mqtt:
 influx:
   host: INFLUX-HOST
   port: INFLUX-PORT
-  user: INFLUX-USERNAME
-  password: INFLUX-PASSWORD
-  dbname: INFLUX-DB-NAME
-  dbuser: INFLUX-DB-USERNAME
-  dbuser_password: INFLUX-DB-PASSWORD
+  token: INFLUX-TOKEN
+  organization: INFLUX-ORGANIZATION
+  bucket: INFLUX-BUCKET
